tests/semantic/valid/test_float_widening.expected
=== Symbol Table ===
Scope: global (level 0)
  compute: fn(a: int, b: float) -> float function [line 1]
  main: fn() -> void function [line 5]
Scope: function:compute (level 1)
  a: int parameter = init [line 1]
  b: float parameter = init [line 1]
Scope: block (level 2)
Scope: function:main (level 1)
Scope: block (level 2)
  result: float variable = init [line 6]

=== Decorated AST ===
Program [line 1, col 1]:
  FunctionDecl: compute(a: int, b: float) -> float [line 1, col 4]:
    Param: a: int
    Param: b: float
    Body:
      Block [line 3, col 1]:
        Return [line 1, col 37]:
          Binary(+) [line 2, col 20]:
            Left:
              Binary(*) [line 2, col 14]:
                Left:
                  Identifier: a -> a [line 2, col 12]
                Right:
                  Identifier: b -> b [line 2, col 16]
            Right:
              Literal: 1.0 (float) [line 2, col 20]
  FunctionDecl: main() -> void [line 5, col 4]:
    Body:
      Block [line 7, col 1]:
        VarDecl: float result = Call: compute [type: None] [line 6, col 11]

No semantic errors.
