tests/semantic/valid/test_float_widening.src
fn compute(int a, float b) -> float {
    return a * b + 1.0;
}

fn main() -> void {
    float result = compute(10, 2.5);
}